@@ -9,58 +9,36 @@ import io.swagger.v3.oas.annotations.security.SecurityScheme;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.annotation.Order;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.authentication.logout.LogoutHandler;
-import org.springframework.security.web.header.writers.XXssProtectionHeaderWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
-/**
- * پیکربندی امنیت مدرن Spring Boot 4.0.5
- * شامل: JWT, XSS Protection, CSP, CORS, Session Management
- */
 @Configuration
 @EnableWebSecurity
-@EnableMethodSecurity(
-        prePostEnabled = true,
-        securedEnabled = true,
-        jsr250Enabled = true
-)
-@SecurityScheme(
-        name = "bearerAuth",
-        type = SecuritySchemeType.HTTP,
-        scheme = "bearer",
-        bearerFormat = "JWT",
-        description = "Enter JWT token"
-)
+@EnableMethodSecurity(prePostEnabled = true, securedEnabled = true)
+@SecurityScheme(name = "bearerAuth", type = SecuritySchemeType.HTTP, scheme = "bearer", bearerFormat = "JWT")
 @RequiredArgsConstructor
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
-    private final CustomUserDetailsService customUserDetailsService;
-    private final CustomAuthenticationEntryPoint authenticationEntryPoint;
+    private final CustomUserDetailsService userDetailsService;
+    private final CustomAuthenticationEntryPoint authEntryPoint;
     private final CustomAccessDeniedHandler accessDeniedHandler;
     private final LogoutHandler logoutHandler;
-
-    // =========================================================================
-    // ============================ ENCRYPTION & AUTH ==========================
-    // =========================================================================
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -72,182 +50,89 @@ public class SecurityConfig {
         return config.getAuthenticationManager();
     }
 
-    // =========================================================================
-    // ============================ CORS CONFIGURATION =========================
-    // =========================================================================
-
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of(
-                "http://localhost:3000",
-                "http://localhost:4200",
-                "http://localhost:8080"
-        ));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "X-Requested-With",
-                "Accept",
-                "Origin",
-                "Access-Control-Request-Method",
-                "Access-Control-Request-Headers"
-        ));
-        configuration.setExposedHeaders(List.of("Authorization"));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:8080"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        config.setExposedHeaders(List.of("Authorization"));
+        config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        source.registerCorsConfiguration("/api/**", configuration);
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 
-    // =========================================================================
-    // ============================ SECURITY FILTER CHAIN =======================
-    // =========================================================================
-
     @Bean
-    @Order(1)
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // ==================== DISABLE FEATURES ====================
                 .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
-                // ==================== SESSION MANAGEMENT ====================
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                        .sessionFixation().changeSessionId()
-                )
-
-                // ==================== SECURITY HEADERS ====================
-                .headers(headers -> headers
-                        // Frame Options (برای H2 Console)
-                        .frameOptions(HeadersConfigurer.FrameOptionsConfig::sameOrigin)
-
-                        // XSS Protection
-                        .xssProtection(xss -> xss
-                                .headerValue(XXssProtectionHeaderWriter.HeaderValue.ENABLED_MODE_BLOCK)
-                        )
-
-                        // Content Security Policy (CSP)
-                        .contentSecurityPolicy(csp -> csp
-                                .policyDirectives(
-                                        "default-src 'self'; " +
-                                                "script-src 'self' 'unsafe-inline' 'unsafe-eval'; " +
-                                                "style-src 'self' 'unsafe-inline'; " +
-                                                "img-src 'self' data: https:; " +
-                                                "font-src 'self' data:; " +
-                                                "connect-src 'self' https:; " +
-                                                "frame-ancestors 'none'; " +
-                                                "form-action 'self'; " +
-                                                "base-uri 'self'; " +
-                                                "upgrade-insecure-requests;"
-                                )
-                        )
-
-                        // Content Type Options (MIME sniffing protection)
-                        .contentTypeOptions(HeadersConfigurer.ContentTypeOptionsConfig::disable)
-
-                        // HSTS (HTTP Strict Transport Security)
-                        .httpStrictTransportSecurity(hsts -> hsts
-                                .includeSubDomains(true)
-                                .preload(true)
-                                .maxAgeInSeconds(31536000)
-                        )
-
-                        // Cache Control
-                        .cacheControl(HeadersConfigurer.CacheControlConfig::disable)
-                )
-
-                // ==================== AUTHORIZATION ====================
                 .authorizeHttpRequests(auth -> auth
-                        // Public endpoints (بدون احراز هویت)
+
+                        // ==================== PUBLIC (همه می‌تونن) ====================
                         .requestMatchers(
-                                "/api/v1/auth/**",
-                                "/api/v1/users/register",
-                                "/api/v1/users/forgot-password",
-                                "/api/v1/users/reset-password",
-                                "/actuator/health",
-                                "/actuator/info",
-                                "/swagger-ui/**",
-                                "/swagger-ui.html",
-                                "/v3/api-docs/**",
-                                "/v3/api-docs",
-                                "/h2-console/**",
-                                "/h2-console",
-                                "/h2-console/*",
-                                "/",
-                                "/index",
-                                "/login",
-                                "/dashboard",
-                                "/css/**",
-                                "/js/**",
-                                "/static/**",
-                                "/**/*.css",
-                                "/**/*.js",
-                                "/**/*.html",
-                                "/error",
-                                "/favicon.ico"
+                                // صفحات عمومی
+                                "/", "/index", "/home", "/login", "/error", "/favicon.ico",
+                                "/css/**", "/js/**", "/images/**", "/static/**", "/webjars/**",
+
+                                // جستجو و مشاهده عمومی
+                                "/doctors/**",
+                                "/departments/**",
+                                "/appointments/book",           // جستجوی نوبت
+                                "/api/v1/doctors/search",       // API جستجوی پزشک
+                                "/api/v1/departments",          // لیست بخش‌ها
+                                "/api/v1/doctors"               // لیست پزشکان
                         ).permitAll()
 
-                        // Admin only
-                        .requestMatchers(
-                                "/api/v1/admin/**",
-                                "/actuator/**"
-                        ).hasRole("ADMIN")
+                        // ==================== احراز هویت ====================
+                        .requestMatchers("/api/v1/auth/**").permitAll()
 
-                        // Super Admin only
-                        .requestMatchers(
-                                "/api/v1/super-admin/**"
-                        ).hasRole("SUPER_ADMIN")
+                        // ==================== Swagger ====================
+                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
 
-                        // Any other request requires authentication
+                        // ==================== H2 Console ====================
+                        .requestMatchers("/h2-console/**").permitAll()
+
+                        // ==================== صفحات نیازمند لاگین ====================
+                        .requestMatchers(
+                                "/dashboard",
+                                "/patient/**",
+                                "/doctor/**",
+                                "/nurse/**",
+                                "/admin/**"
+                        ).authenticated()
+
+                        // ==================== APIهای نقش‌محور ====================
+                        .requestMatchers("/api/v1/admin/**").hasRole("ADMIN")
+                        .requestMatchers("/api/v1/doctor/**").hasAnyRole("DOCTOR", "ADMIN")
+                        .requestMatchers("/api/v1/nurse/**").hasAnyRole("NURSE", "ADMIN")
+                        .requestMatchers("/api/v1/patient/**").hasAnyRole("PATIENT", "ADMIN")
+
                         .anyRequest().authenticated()
                 )
 
-                // ==================== EXCEPTION HANDLING ====================
-                .exceptionHandling(exception -> exception
-                        .authenticationEntryPoint(authenticationEntryPoint)
+                .exceptionHandling(ex -> ex
+                        .authenticationEntryPoint(authEntryPoint)
                         .accessDeniedHandler(accessDeniedHandler)
                 )
 
-                // ==================== LOGOUT ====================
                 .logout(logout -> logout
                         .logoutUrl("/api/v1/auth/logout")
-                        .logoutSuccessHandler((request, response, authentication) -> {
-                            response.setStatus(200);
-                            response.setContentType("application/json");
-                            response.getWriter().write("{\"success\":true,\"message\":\"Logout successful\"}");
-                        })
                         .addLogoutHandler(logoutHandler)
-                        .clearAuthentication(true)
-                        .invalidateHttpSession(true)
-                        .deleteCookies("JSESSIONID")
+                        .logoutSuccessHandler((req, res, auth) -> {
+                            res.setStatus(200);
+                            res.setContentType("application/json");
+                            res.getWriter().write("{\"success\":true,\"message\":\"Logged out successfully\"}");
+                        })
                 )
 
-                // ==================== AUTHENTICATION ====================
-                .userDetailsService(customUserDetailsService)
+                .userDetailsService(userDetailsService)
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
-    }
-
-    // =========================================================================
-    // ============================ REQUEST LOGGING ============================
-    // =========================================================================
-
-    @Bean
-    public org.springframework.web.filter.CommonsRequestLoggingFilter requestLoggingFilter() {
-        org.springframework.web.filter.CommonsRequestLoggingFilter loggingFilter =
-                new org.springframework.web.filter.CommonsRequestLoggingFilter();
-        loggingFilter.setIncludeClientInfo(true);
-        loggingFilter.setIncludeQueryString(true);
-        loggingFilter.setIncludePayload(true);
-        loggingFilter.setMaxPayloadLength(1000);
-        loggingFilter.setIncludeHeaders(false);
-        return loggingFilter;
     }
 }
